Fixed issue with inset/outset not showing on IE by changing border colour, also added background colour change to make it more obvious.
Added "free for all" track.

Fixed issue with resizing tracks and resetting a game.

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
 }
 
 .accelerate {
+    border-color: white;
     border-style: outset;
 }
 
